--- a/kick-wahoo.ioc
+++ b/kick-wahoo.ioc
@@ -4,113 +4,154 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.ProjectFileName=kick-wahoo.ioc
 PH0-OSC_IN.Signal=RCC_OSC_IN
 RCC.CortexFreq_Value=168000000
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 ProjectManager.KeepUserCode=true
+PA10.Mode=Asynchronous
 Mcu.UserName=STM32F405RGTx
-Mcu.PinsNb=7
+Mcu.PinsNb=13
 ProjectManager.NoMain=false
+NVIC.SavedSvcallIrqHandlerGenerated=true
 RCC.PLLCLKFreq_Value=168000000
 RCC.PLLQCLKFreq_Value=48000000
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
 PA11.Mode=Device_Only
 RCC.RTCFreq_Value=32000
 ProjectManager.DefaultFWLocation=true
+PB0.GPIO_Label=RLED
 ProjectManager.DeletePrevious=true
+USART1.IPParameters=VirtualMode
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 PA13.Signal=SYS_JTMS-SWDIO
+Mcu.IP4=USART1
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP2=SYS
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP3=USB_OTG_FS
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
+Mcu.IP5=USB_OTG_FS
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP0=FREERTOS
+Mcu.IP1=NVIC
+PA9.Mode=Asynchronous
 PA12.Signal=USB_OTG_FS_DP
 Mcu.UserConstants=
 ProjectManager.TargetToolchain=Makefile
+PB0.PinState=GPIO_PIN_SET
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=4
+Mcu.IPNb=6
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=168000000
+PA9.Signal=USART1_TX
+PB2.GPIOParameters=PinState,GPIO_Label
 RCC.VcooutputI2S=192000000
-Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin6=PA10
+Mcu.Pin7=PA11
 ProjectManager.RegisterCallBack=
+Mcu.Pin8=PA12
+Mcu.Pin9=PA13
+FREERTOS.IPParameters=Tasks01
 RCC.LSE_VALUE=32768
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin0=PH0-OSC_IN
+PB1.Locked=true
 Mcu.Pin1=PH1-OSC_OUT
-GPIO.groupedBy=
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PA13
+GPIO.groupedBy=Group By Peripherals
+Mcu.Pin2=PB0
+Mcu.Pin3=PB1
+Mcu.Pin4=PB2
 RCC.VCOI2SOutputFreq_Value=384000000
-Mcu.Pin5=PA14
+Mcu.Pin5=PA9
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=12000000
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+PB2.Signal=GPIO_Output
 board=custom
 RCC.VCOOutputFreq_Value=336000000
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 ProjectManager.LastFirmware=true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
+VP_SYS_VS_tim14.Signal=SYS_VS_tim14
 MxDb.Version=DB.6.0.10
+PB0.GPIOParameters=PinState,GPIO_Label
+NVIC.SavedSystickIrqHandlerGenerated=true
 RCC.APB2Freq_Value=84000000
 ProjectManager.BackupPrevious=false
 MxCube.Version=6.1.0
 RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
+PB1.GPIO_Label=GLED
 File.Version=6
-VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=168000000
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA9.Locked=true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+VP_SYS_VS_tim14.Mode=TIM14
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F405RGTx
+PB2.PinState=GPIO_PIN_SET
 ProjectManager.HalAssertFull=false
+PB0.Locked=true
+NVIC.SavedPendsvIrqHandlerGenerated=true
 RCC.RTCHSEDivFreq_Value=6000000
 ProjectManager.ProjectName=kick-wahoo
 ProjectManager.UnderRoot=false
+PB2.Locked=true
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+PB1.PinState=GPIO_PIN_SET
 ProjectManager.CoupleFile=true
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 RCC.48MHZClocksFreq_Value=48000000
 RCC.MCO2PinFreq_Value=168000000
 RCC.SYSCLKFreq_VALUE=168000000
 Mcu.Package=LQFP64
+PB1.Signal=GPIO_Output
+NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
 PA12.Mode=Device_Only
+PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA11.Signal=USB_OTG_FS_DM
+NVIC.TimeBaseIP=TIM14
+PA10.Signal=USART1_RX
 PA14.Signal=SYS_JTCK-SWCLK
 USB_OTG_FS.VirtualMode=Device_Only
+PB2.GPIO_Label=BLED
 ProjectManager.HeapSize=0x200
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ProjectManager.ComputerToolchain=false
 RCC.HSI_VALUE=16000000
 RCC.PLLQ=7
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
+Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin12=VP_SYS_VS_tim14
 RCC.PLLM=6
 RCC.PLLN=168
+Mcu.Pin10=PA14
 RCC.APB1TimFreq_Value=84000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 USB_OTG_FS.IPParameters=VirtualMode
 RCC.APB1Freq_Value=42000000
+PB0.Signal=GPIO_Output
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.LibraryCopy=1
+PB1.GPIOParameters=PinState,GPIO_Label
