--- a/kick-wahoo.ioc
+++ b/kick-wahoo.ioc
@@ -1,157 +1,215 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F4
 ProjectManager.MainLocation=Core/Src
-ProjectManager.ProjectFileName=kick-wahoo.ioc
 PH0-OSC_IN.Signal=RCC_OSC_IN
 RCC.CortexFreq_Value=168000000
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 ProjectManager.KeepUserCode=true
-PA10.Mode=Asynchronous
 Mcu.UserName=STM32F405RGTx
-Mcu.PinsNb=13
-ProjectManager.NoMain=false
-NVIC.SavedSvcallIrqHandlerGenerated=true
+ADC1.ContinuousConvMode=ENABLE
+SH.ADCx_IN2.0=ADC1_IN2,IN2
 RCC.PLLCLKFreq_Value=168000000
 RCC.PLLQCLKFreq_Value=48000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
 PA11.Mode=Device_Only
 RCC.RTCFreq_Value=32000
-ProjectManager.DefaultFWLocation=true
 PB0.GPIO_Label=RLED
-ProjectManager.DeletePrevious=true
 USART1.IPParameters=VirtualMode
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
+PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
-RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-PA13.Signal=SYS_JTMS-SWDIO
-Mcu.IP4=USART1
+Mcu.IP4=RCC
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=USB_OTG_FS
+Mcu.IP5=SYS
+Mcu.IP2=FREERTOS
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-PA9.Mode=Asynchronous
+Mcu.IP3=NVIC
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
 PA12.Signal=USB_OTG_FS_DP
 Mcu.UserConstants=
-ProjectManager.TargetToolchain=Makefile
 PB0.PinState=GPIO_PIN_SET
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=6
+Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=192000000
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=168000000
-PA9.Signal=USART1_TX
-PB2.GPIOParameters=PinState,GPIO_Label
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.VcooutputI2S=192000000
-Mcu.Pin6=PA10
-Mcu.Pin7=PA11
-ProjectManager.RegisterCallBack=
-Mcu.Pin8=PA12
-Mcu.Pin9=PA13
+Mcu.Pin6=PA6
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB2
 FREERTOS.IPParameters=Tasks01
-RCC.LSE_VALUE=32768
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 RCC.AHBFreq_Value=168000000
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin0=PH0-OSC_IN
-PB1.Locked=true
 Mcu.Pin1=PH1-OSC_OUT
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PB0
-Mcu.Pin3=PB1
-Mcu.Pin4=PB2
-RCC.VCOI2SOutputFreq_Value=384000000
-Mcu.Pin5=PA9
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+PA0-WKUP.GPIOParameters=GPIO_Label
+Mcu.Pin4=PA2
+Mcu.Pin5=PA5
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=12000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PB2.Signal=GPIO_Output
-board=custom
-RCC.VCOOutputFreq_Value=336000000
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-ProjectManager.LastFirmware=true
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
 MxDb.Version=DB.6.0.10
 PB0.GPIOParameters=PinState,GPIO_Label
-NVIC.SavedSystickIrqHandlerGenerated=true
-RCC.APB2Freq_Value=84000000
+PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
-MxCube.Version=6.1.0
 RCC.VCOInputFreq_Value=2000000
 PA14.Mode=Serial_Wire
+SH.ADCx_IN1.ConfNb=1
 PB1.GPIO_Label=GLED
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 File.Version=6
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+VP_SYS_VS_tim14.Mode=TIM14
+Dma.RequestsNb=1
+ProjectManager.HalAssertFull=false
+PB0.Locked=true
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ProjectManager.ProjectName=kick-wahoo
+PB1.PinState=GPIO_PIN_SET
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
+RCC.MCO2PinFreq_Value=168000000
+Mcu.Package=LQFP64
+PA6.Signal=S_TIM3_CH1
+PB1.Signal=GPIO_Output
+PA5.Locked=true
+NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+ProjectManager.ToolChainLocation=
+PA2.GPIO_Label=EMF_SENSE
+RCC.LSI_VALUE=32000
+NVIC.TimeBaseIP=TIM14
+PA10.Signal=USART1_RX
+USB_OTG_FS.VirtualMode=Device_Only
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+RCC.APB1TimFreq_Value=84000000
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+USB_OTG_FS.IPParameters=VirtualMode
+Dma.Request0=ADC1
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.ProjectFileName=kick-wahoo.ioc
+Dma.ADC1.0.Instance=DMA2_Stream0
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+ADC1.Rank-0\#ChannelRegularConversion=1
+PA10.Mode=Asynchronous
+Mcu.PinsNb=18
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+ProjectManager.NoMain=false
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
+NVIC.SavedSvcallIrqHandlerGenerated=true
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+SH.S_TIM2_CH1_ETR.ConfNb=1
+RCC.FamilyName=M
+PA0-WKUP.GPIO_Label=VSENSE
+PA0-WKUP.Signal=ADCx_IN0
+PA13.Signal=SYS_JTMS-SWDIO
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+PA9.Mode=Asynchronous
+ProjectManager.TargetToolchain=Makefile
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+PB2.GPIOParameters=PinState,GPIO_Label
+PA9.Signal=USART1_TX
+ProjectManager.RegisterCallBack=
+RCC.LSE_VALUE=32768
+PA1.Signal=ADCx_IN1
+PB1.Locked=true
+RCC.VCOI2SOutputFreq_Value=384000000
+PA5.Signal=S_TIM2_CH1_ETR
+board=custom
+RCC.VCOOutputFreq_Value=336000000
+ProjectManager.LastFirmware=true
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+NVIC.SavedSystickIrqHandlerGenerated=true
+RCC.APB2Freq_Value=84000000
+MxCube.Version=6.1.0
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN2.ConfNb=1
+PA1.GPIO_Label=ISENSE
 RCC.EthernetFreq_Value=168000000
+TIM3.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
-VP_SYS_VS_tim14.Mode=TIM14
+ADC1.DMAContinuousRequests=ENABLE
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 ProjectManager.AskForMigrate=true
-Mcu.Name=STM32F405RGTx
 PB2.PinState=GPIO_PIN_SET
-ProjectManager.HalAssertFull=false
-PB0.Locked=true
+Mcu.Name=STM32F405RGTx
 NVIC.SavedPendsvIrqHandlerGenerated=true
 RCC.RTCHSEDivFreq_Value=6000000
-ProjectManager.ProjectName=kick-wahoo
+PA2.Signal=ADCx_IN2
 ProjectManager.UnderRoot=false
 PB2.Locked=true
+Mcu.IP8=USART1
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-PB1.PinState=GPIO_PIN_SET
+Mcu.IP9=USB_OTG_FS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
 ProjectManager.CoupleFile=true
-PH1-OSC_OUT.Mode=HSE-External-Oscillator
 RCC.48MHZClocksFreq_Value=48000000
-RCC.MCO2PinFreq_Value=168000000
 RCC.SYSCLKFreq_VALUE=168000000
-Mcu.Package=LQFP64
-PB1.Signal=GPIO_Output
-NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
+ADC1.master=1
 PA12.Mode=Device_Only
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
-RCC.LSI_VALUE=32000
 PA11.Signal=USB_OTG_FS_DM
-NVIC.TimeBaseIP=TIM14
-PA10.Signal=USART1_RX
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 PA14.Signal=SYS_JTCK-SWCLK
-USB_OTG_FS.VirtualMode=Device_Only
 PB2.GPIO_Label=BLED
 ProjectManager.HeapSize=0x200
+Mcu.Pin15=PA14
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+SH.S_TIM3_CH1.ConfNb=1
 ProjectManager.ComputerToolchain=false
+Mcu.Pin17=VP_SYS_VS_tim14
 RCC.HSI_VALUE=16000000
 RCC.PLLQ=7
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin12=VP_SYS_VS_tim14
+ADC1.NbrOfConversionFlag=1
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
 RCC.PLLM=6
 RCC.PLLN=168
-Mcu.Pin10=PA14
-RCC.APB1TimFreq_Value=84000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-USB_OTG_FS.IPParameters=VirtualMode
+Mcu.Pin10=PA9
 RCC.APB1Freq_Value=42000000
 PB0.Signal=GPIO_Output
-ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.LibraryCopy=1
 PB1.GPIOParameters=PinState,GPIO_Label
