--- a/kick-wahoo.ioc
+++ b/kick-wahoo.ioc
@@ -1,215 +1,222 @@
 #MicroXplorer Configuration settings - do not modify
-Mcu.Family=STM32F4
-ProjectManager.MainLocation=Core/Src
-PH0-OSC_IN.Signal=RCC_OSC_IN
-RCC.CortexFreq_Value=168000000
-TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32F405RGTx
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ContinuousConvMode=ENABLE
-SH.ADCx_IN2.0=ADC1_IN2,IN2
-RCC.PLLCLKFreq_Value=168000000
-RCC.PLLQCLKFreq_Value=48000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
-PA11.Mode=Device_Only
-RCC.RTCFreq_Value=32000
-PB0.GPIO_Label=RLED
-USART1.IPParameters=VirtualMode
-PA2.GPIOParameters=GPIO_Label
-PinOutPanel.RotationAngle=0
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-Mcu.IP4=RCC
-RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=SYS
-Mcu.IP2=FREERTOS
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-Mcu.IP3=NVIC
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversion
+ADC1.NbrOfConversion=3
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-2\#ChannelRegularConversion=3
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
+ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
+FREERTOS.IPParameters=Tasks01
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+File.Version=6
+GPIO.groupedBy=Group By Peripherals
+KeepUserPlacement=false
+Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-PA12.Signal=USB_OTG_FS_DP
-Mcu.UserConstants=
-PB0.PinState=GPIO_PIN_SET
-Mcu.ThirdPartyNb=0
-RCC.HCLKFreq_Value=168000000
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IP9=USB_OTG_FS
 Mcu.IPNb=10
-RCC.I2SClocksFreq_Value=192000000
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1
-ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=168000000
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-RCC.VcooutputI2S=192000000
+Mcu.Name=STM32F405RGTx
+Mcu.Package=LQFP64
+Mcu.Pin0=PH0-OSC_IN
+Mcu.Pin1=PH1-OSC_OUT
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin17=VP_SYS_VS_tim14
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA5
 Mcu.Pin6=PA6
-NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-FREERTOS.IPParameters=Tasks01
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-RCC.AHBFreq_Value=168000000
-PH0-OSC_IN.Mode=HSE-External-Oscillator
-Mcu.Pin0=PH0-OSC_IN
-Mcu.Pin1=PH1-OSC_OUT
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA1
-PA0-WKUP.GPIOParameters=GPIO_Label
-Mcu.Pin4=PA2
-Mcu.Pin5=PA5
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ProjectManager.ProjectBuild=false
-RCC.HSE_VALUE=12000000
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-PB2.Signal=GPIO_Output
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
-VP_SYS_VS_tim14.Signal=SYS_VS_tim14
-MxDb.Version=DB.6.0.10
-PB0.GPIOParameters=PinState,GPIO_Label
-PA1.GPIOParameters=GPIO_Label
-ProjectManager.BackupPrevious=false
-RCC.VCOInputFreq_Value=2000000
-PA14.Mode=Serial_Wire
-SH.ADCx_IN1.ConfNb=1
-PB1.GPIO_Label=GLED
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-File.Version=6
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-VP_SYS_VS_tim14.Mode=TIM14
-Dma.RequestsNb=1
-ProjectManager.HalAssertFull=false
-PB0.Locked=true
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ProjectManager.ProjectName=kick-wahoo
-PB1.PinState=GPIO_PIN_SET
-PH1-OSC_OUT.Mode=HSE-External-Oscillator
-RCC.MCO2PinFreq_Value=168000000
-Mcu.Package=LQFP64
-PA6.Signal=S_TIM3_CH1
-PB1.Signal=GPIO_Output
-PA5.Locked=true
-NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-ProjectManager.ToolChainLocation=
-PA2.GPIO_Label=EMF_SENSE
-RCC.LSI_VALUE=32000
-NVIC.TimeBaseIP=TIM14
-PA10.Signal=USART1_RX
-USB_OTG_FS.VirtualMode=Device_Only
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-RCC.APB1TimFreq_Value=84000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-USB_OTG_FS.IPParameters=VirtualMode
-Dma.Request0=ADC1
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.ProjectFileName=kick-wahoo.ioc
-Dma.ADC1.0.Instance=DMA2_Stream0
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-ADC1.Rank-0\#ChannelRegularConversion=1
-PA10.Mode=Asynchronous
 Mcu.PinsNb=18
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-ProjectManager.NoMain=false
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
+Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
+Mcu.UserName=STM32F405RGTx
+MxCube.Version=6.1.0
+MxDb.Version=DB.6.0.10
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.ForceEnableDMAVector=true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-SH.S_TIM2_CH1_ETR.ConfNb=1
-RCC.FamilyName=M
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
+NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
+NVIC.TimeBaseIP=TIM14
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=VSENSE
 PA0-WKUP.Signal=ADCx_IN0
-PA13.Signal=SYS_JTMS-SWDIO
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-PA9.Mode=Asynchronous
-ProjectManager.TargetToolchain=Makefile
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
-PB2.GPIOParameters=PinState,GPIO_Label
-PA9.Signal=USART1_TX
-ProjectManager.RegisterCallBack=
-RCC.LSE_VALUE=32768
-PA1.Signal=ADCx_IN1
-PB1.Locked=true
-RCC.VCOI2SOutputFreq_Value=384000000
-PA5.Signal=S_TIM2_CH1_ETR
-board=custom
-RCC.VCOOutputFreq_Value=336000000
-ProjectManager.LastFirmware=true
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-NVIC.SavedSystickIrqHandlerGenerated=true
-RCC.APB2Freq_Value=84000000
-MxCube.Version=6.1.0
-SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN2.ConfNb=1
+PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ISENSE
-RCC.EthernetFreq_Value=168000000
-TIM3.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload
-PH1-OSC_OUT.Signal=RCC_OSC_OUT
-PA9.Locked=true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-ADC1.DMAContinuousRequests=ENABLE
-PA13.Mode=Serial_Wire
-ProjectManager.FreePins=false
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
-ProjectManager.AskForMigrate=true
-PB2.PinState=GPIO_PIN_SET
-Mcu.Name=STM32F405RGTx
-NVIC.SavedPendsvIrqHandlerGenerated=true
-RCC.RTCHSEDivFreq_Value=6000000
-PA2.Signal=ADCx_IN2
-ProjectManager.UnderRoot=false
-PB2.Locked=true
-Mcu.IP8=USART1
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-Mcu.IP9=USB_OTG_FS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-ProjectManager.CoupleFile=true
-RCC.48MHZClocksFreq_Value=48000000
-RCC.SYSCLKFreq_VALUE=168000000
-ADC1.master=1
-PA12.Mode=Device_Only
+PA1.Signal=ADCx_IN1
 PA10.Locked=true
-NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-USART1.VirtualMode=VM_ASYNC
-ProjectManager.CompilerOptimize=6
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=EMF_SENSE
+PA2.Signal=ADCx_IN2
+PA5.Locked=true
+PA5.Signal=S_TIM2_CH1_ETR
+PA6.Signal=S_TIM3_CH1
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
+PB0.GPIOParameters=PinState,GPIO_Label
+PB0.GPIO_Label=RLED
+PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=PinState,GPIO_Label
+PB1.GPIO_Label=GLED
+PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
+PB1.Signal=GPIO_Output
+PB2.GPIOParameters=PinState,GPIO_Label
 PB2.GPIO_Label=BLED
-ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA14
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-SH.S_TIM3_CH1.ConfNb=1
+PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
+PB2.Signal=GPIO_Output
+PH0-OSC_IN.Mode=HSE-External-Oscillator
+PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=VP_SYS_VS_tim14
+ProjectManager.CoupleFile=true
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32F405RGTx
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Core/Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=kick-wahoo.ioc
+ProjectManager.ProjectName=kick-wahoo
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=Makefile
+ProjectManager.ToolChainLocation=
+ProjectManager.UnderRoot=false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
+RCC.48MHZClocksFreq_Value=48000000
+RCC.AHBFreq_Value=168000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=168000000
+RCC.CortexFreq_Value=168000000
+RCC.EthernetFreq_Value=168000000
+RCC.FCLKCortexFreq_Value=168000000
+RCC.FamilyName=M
+RCC.HCLKFreq_Value=168000000
+RCC.HSE_VALUE=12000000
 RCC.HSI_VALUE=16000000
-RCC.PLLQ=7
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
+RCC.I2SClocksFreq_Value=192000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
+RCC.LSI_VALUE=32000
+RCC.MCO2PinFreq_Value=168000000
+RCC.PLLCLKFreq_Value=168000000
 RCC.PLLM=6
 RCC.PLLN=168
-Mcu.Pin10=PA9
-RCC.APB1Freq_Value=42000000
-PB0.Signal=GPIO_Output
-ProjectManager.DeviceId=STM32F405RGTx
-ProjectManager.LibraryCopy=1
-PB1.GPIOParameters=PinState,GPIO_Label
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
+RCC.RTCFreq_Value=32000
+RCC.RTCHSEDivFreq_Value=6000000
+RCC.SYSCLKFreq_VALUE=168000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.VCOI2SOutputFreq_Value=384000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=336000000
+RCC.VcooutputI2S=192000000
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_SYS_VS_tim14.Mode=TIM14
+VP_SYS_VS_tim14.Signal=SYS_VS_tim14
+board=custom
